2006-06-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* auctex.spec (%post, %postun): Use mktexlsr instead of texhash.
	Only update the relevant ls-R file.
	(%install): Add comment about preview.cfg.
	(%install, %files): prauctex.cfg is the config file, not
	preview.cfg.

2006-06-07  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (LaTeX-set-paragraph-start): New function.
	(LaTeX-paragraph-commands-add-locally)
	(LaTeX-common-initialization): Use it.

2006-06-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* Version 11.83 released.

2006-06-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* Makefile.in (full-release): Remove duplicate pass phrase prompt.
	(release-commit): Only commit ChangeLog.

	* Makefile.in (rpm-packages): Rename from rpm-builds.

	* RELEASE: Fix typo.

	* Makefile.in (rpm-builds): Add preview-tetex.

	* auctex.spec: Add "-n" for preview-tetex.
	(%install): Create preview.cfg.

2006-06-07  David Kastrup  <dak@gnu.org>

	* RELEASE: Add info about preview RPM.

	* doc/install.texi (Advice for package providers): Adapt package
	advice to what we actually do for RPM files.

	* auctex.spec: attempt to add preview-tetex package.

2006-06-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* Makefile.in (XEMACS_BUILD_DIR): New variable.
	(xemacs-package): Use it.
	(tar-ball-clean): Add XEMACS_BUILD_DIR.
	(CP): New variable.
	(tar-ball, www-doc): Use it.

	* RELEASE: Update RPM stuff.

	* tex.el (TeX-line-number-at-pos): New compatibility function.

	* style/pdfsync.el (LaTeX-pdfsync-output-page): Use it.

	* auctex.spec (Obsoletes): Remove preview-latex-common.

2006-06-06  Ralf Angeli  <angeli@caeruleus.net>

	* style/pdfsync.el (LaTeX-pdfsync-output-page): Initialize
	`sync-record' with a non-nil value.

	* doc/auctex.texi (Viewing): Fix reference to Commands node
	looking ugly in info output.  Slightly rearrange forward/inverse
	search section.  Document pdfsync support a bit more in detail.

2006-06-06  Reiner Steib  <Reiner.Steib@gmx.de>
