@@ -6,11 +6,11 @@ This style file is part of the AUCTeX project with home page
 anonymous CVS access for cutting edge versions.  It is part of
 AUCTeX's preview-latex module: since AUCTeX's download area at
 <URL:ftp://ftp.gnu.org/pub/gnu/auctex> is mirrored at
-CTAN:support/auctex, you can find preview-latex tarballs there, with
-separate README and INSTALL files.  Older versions can be found at
-CTAN:support/preview-latex.  Starting with AUCTeX 11.81, preview-latex
-will also be distributed as an integral part of AUCTeX, requiring no
-separate download.  The unbundled preview.sty can be downloaded from
+CTAN:support/auctex, you can find AUCTeX tarballs there, with separate
+README and INSTALL files.  Versions under CTAN:support/preview-latex
+are outdated.  Starting with AUCTeX 11.81, preview-latex is
+distributed as an integral part of AUCTeX, requiring no separate
+download.  The unbundled preview.dtx can be downloaded from
 CTAN:macros/latex/contrib/preview if required.
 
 While the primary focus of the package has been the support of editing
@@ -26,11 +26,6 @@ work in a single pass.
 
 A flexible and convenient interface allows it to specify what commands
 and constructs should be extracted.
-
-Note: as opposed to previous versions, the \nofiles command is no
-longer called automatically except in AUCTeX mode.  If you are working
-on original files and don't want to clobber the auxiliary files,
-you'll need to call \nofiles yourself.
 
 To install the preview style file on its own without fetching the
 entire preview-latex package, run
@@ -49,10 +44,7 @@ location where LaTeX will be able to find them, generate the
 documentation and have fun.
 
 The license of the original file is the GPL which you'll find a copy
-of in the complete preview-latex distribution.  The complete
-preview-latex distribution will also unpack and install the respective
-LaTeX files with an autoconf-supported mechanism, so you might
-consider using that.
+of in the complete AUCTeX distribution.
 
 Please report problems to <URL:mailto:bug-auctex@gnu.org>, including a
 small example file which uses the \listfiles statement, and the
